--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^6.15.5",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.1",
     "yup": "^0.32.9"
   },
